crates/rlf-macros/tests/fail/multiple_defaults.rs
use rlf::rlf;

rlf! {
    card = { *one: "card", *other: "cards" };
}

fn main() {}
